--- a/www/css/style.css
+++ b/www/css/style.css
@@ -175,6 +175,11 @@ select {
     text-align: right;
 }
 
+.input-form input[type="checkbox"] {
+    width: 30px;
+}
+
+
 .pagination {
     list-style-type: none;
     padding: 0.5em;
