--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,16 @@ select {
     color: #fff;
 }
 
+#sider .separator {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: 4px;
+    width: 80%;
+    border-top: 1px dashed #aaa;
+    color: #aaa;
+}
+
 /**
  * #.# Content
  * 
